<resources>
    <string name="app_name">i\'Cycle Baia Mare</string>
    <string name="title_activity_maps">i\'Cycle Baia Mare</string>
    <string name="title_activity_navigation__slider">i\'Cycle Baia Mare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ScrollAwareFABBehavior">vyrus.lib.ScrollAwareFABBehavior</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <!--Tutorials-->
    <string name="InvTitle">Choose your desired color</string>
    <string name="InvText">From here, You can choose to see all or one of the 5 different domains.</string>
    <string name="ColorBarTitle">Objectives List</string>
    <string name="ColorBarText"> After that, you click on a circle and view its description by sliding up the banner.</string>
    <string name="NavigationToTitle">Your position</string>
    <string name="NavigationToText">This arrow will take you to the selected objective.</string>
    <string name="routeWithGoogleMapTitle">Google Maps route</string>
    <string name="routeWithGoogleMapText">This button will open the selected track. We suggest you visit this objectives by bicycle!</string>
    <string name="DificultyTutTitle">Proposed routes</string>
    <string name="DificultyTutText">From this group you can choose from the 4 routes suggested by us, depending on the level of difficulty</string>
    <string name="LocationTutTitle">Your location</string>
    <string name="LocationTutText">This button will show you the position and objective closest to You.</string>
    <string name="Menu_SiteTutTitle">This is our website</string>
    <string name="Menu_SiteTutText">For more details about us and what we do, please feel free to visit us on our website</string>
    <string name="Menu_bottomTutTitle">Main Menu</string>
    <string name="Menu_bottomTutText">For now, you can see the next event from our town</string>
    <string name="MapTutTitle">Difficulty route</string>
    <string name="MapTutText">This route consists of several different objectives</string>

    <string name="TestTutTitle">In Construction</string>
    <string name="TestTutText">In Construction.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="you_want_to_show_you_in_google_maps">You want to show you in Google Maps?</string>
    <string name="double_back_click_to_exit_message">Please click BACK again to exit</string>
    <string name="gps_permission_grated_info_message">GPS permission allows us to access location data. Please allow in App Settings for additional functionality.</string>
    <string name="gps_error_location_message">Error Location please run</string>
    <string name="about_us">About Us</string>
    <string name="apache_license">APACHE LICENSE</string>
    <string name="muntzomani_header">Muntzomani</string>
    <string name="email_muntzomani">muntzomani@gmail.com</string>
    <string name="item_set_route_difficulty_recommendation">Our proposals</string>
    <string name="item_set_route_difficulty_light">Light</string>
    <string name="item_set_route_difficulty_medium">Medium</string>
    <string name="item_set_route_difficulty_hard">Hard</string>
    <string name="item_set_route_difficulty_extra_hard">Extra Hard</string>
    <string name="item_what_and_how">What and How?</string>
    <string name="item_cultural_events">Cultural Events</string>
    <string name="muntzomani_web_site">http://muntzomani.ro/</string>
    <string name="sorry">Sorry</string>
    <string name="poi_all">All</string>
    <string name="poi_science">Science</string>
    <string name="poi_nature">Nature</string>
    <string name="poi_arts">Arts</string>
    <string name="poi_history">History</string>
    <string name="poi_culture">Culture</string>
</resources>
